# OpenGL-experiments

./: .gitattributes  CMakeLists.txt  README.md
includes/glad/: glad.h
includes/learnopengl/: Camera.hpp  Shaders.hpp
includes/testgl/: callbacks.hpp  chunk.hpp  chunkpos.hpp  constants.hpp  cube.hpp  logging.hpp  main.hpp  player.hpp  sun.hpp  voxel.hpp  window.hpp  world.hpp  worldgen.hpp
shaders/: base.frag  base.vert  texture_light.frag  texture_light.vert
src/: main.cpp
src/common/: callbacks.cpp  chunk.cpp  chunkpos.cpp  cube.cpp  glad.c  logging.cpp  player.cpp  sun.cpp  window.cpp  world.cpp  worldgen.cpp
